--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,13 +25,18 @@ jobs:
           path: public/
   test:
     runs-on: ubuntu-latest
-    
+    needs: build
+
     strategy:
       matrix:
         node-version: [10.x, 12.x]
         os: [ubuntu-latest, windows-2016]
 
     steps:
+    - uses: actions/download-artifact@master
+      with:
+        name: webpack artifacts
+        path: public
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
